Project1/force-app/main/default/objects/Work_Invoice__c/Work_Invoice__c.object-meta.xml
<CustomObject>
    <label>Work Invoice</label>
    <nameField>
        <displayFormat>W-{0}</displayFormat>
        <label>Work Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>