Project1/force-app/main/default/objects/Work_Invoice__c/fields/Mechanic__c.field-meta.xml
<CustomField>
    <fullName>Mechanic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanic</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Invoices</relationshipLabel>
    <relationshipName>Work_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>