Project1/force-app/main/default/objects/Work_Invoice__c/fields/Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Vehicles__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicles</label>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Work Invoices</relationshipLabel>
    <relationshipName>Work_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>