Project1/force-app/main/default/objects/Work_Invoice__c/fields/Work_Requested__c.field-meta.xml
<CustomField>
    <fullName>Work_Requested__c</fullName>
    <label>Work Requested</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Requested Work</relationshipLabel>
    <relationshipName>Work_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>