Project1/force-app/main/default/objects/Work_Invoice__c/fields/Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Status__c</fullName>
    <label>Work Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multipoint Inspection</fullName>
                <default>true</default>
                <label>Multipoint Inspection</label>
            </value>
            <value>
                <fullName>Work Started</fullName>
            </value>
            <value>
                <fullName>Waiting for Parts</fullName>
            </value>
            <value>
                <fullName>Work in Progress</fullName>
            </value>
            <value>
                <fullName>Work Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>